[package]
name = "grrs"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "A tool to seach files"
categories = ["comman-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }



[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

